🔧 Suppression de la navbar en double dans layout.ejs

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -7,19 +7,7 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="container">
-            <div class="logo">
-                <span class="terminal-prompt">root@cybersec:~#</span>
-            </div>
-            <ul class="nav-menu">
-                <li><a href="/" class="<%= page === 'home' ? 'active' : '' %>">Home</a></li>
-                <li><a href="/tools" class="<%= page === 'tools' ? 'active' : '' %>">Tools</a></li>
-                <li><a href="/blog" class="<%= page === 'blog' ? 'active' : '' %>">Blog</a></li>
-                <li><a href="/about" class="<%= page === 'about' ? 'active' : '' %>">About</a></li>
-            </ul>
-        </div>
-    </nav>
+    <%- include('partials/navbar', {page: page}) %>
 
     <main>
         <%- body %>
